# anycast-tracker

./: .gitignore  command.txt  docker-compose.yml
.github/workflows/: ci.yml
app/: pyproject.toml
app/src/anycast_tracker/: __init__.py  __main__.py  demo123.py
infrastructure/container/: Dockerfile
infrastructure/terraform/: containers.tf  cosmos_db.tf  outputs.tf  variables.tf
infrastructure/terraform/aws/: batch.tf  dynamodb.tf  iam.tf  network.tf  outputs.tf  providers.tf  scheduler.tf  variables.tf
infrastructure/terraform/azure/: main.tf  providers.tf  variables.tf
