[project]
name = "anycast_tracker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cosmos (>=4.9.0,<5.0.0)",
    "azure-identity (>=1.23.0,<2.0.0)"
]

[project.scripts]
start = "anycast_tracker:main"

[tool.poetry]
packages = [{include = "anycast_tracker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
