[project]
name = "anycast_tracker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cosmos (>=4.9.0,<5.0.0)",
    "azure-identity (>=1.23.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "anycast_tracker", from = "src"}]

[project.scripts]
start = "anycast_tracker.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
