[project]
name = "anycast_tracker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.38.23,<2.0.0)"
    
]

[tool.poetry]
packages = [{include = "anycast_tracker", from = "src"}]

[project.scripts]
start = "anycast_tracker.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
